fixed width on mobile screen menu active

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -36,7 +36,7 @@
 	position: absolute;
 	top: 0;
 	left: -760px;
-	width: calc(100vw - 1.03em);
+	width: 100%;
 	height: 100vh;
 	background-color: rgba(37, 43, 70, 0.9);
 	padding: 2em;
